Update biography in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Katsumi Ibaraki"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD Student at the University of Notre Dame"
   location         : "South Bend, Indiana"
   employer         : "University of Notre Dame"
   uri              : # URL
