--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "kibaraki/kibaraki.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/IMG-20250310-WA0000.jpg"
+  avatar           : "IMG-20250310-WA0000.jpg"
   name             : "Katsumi Ibaraki"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student at the University of Notre Dame"
