--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "katsumi-ibaraki-a96716177"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
