--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification :  googleaebc76b38a5d59b9.html
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
